# DA4RDM_Vis_ProcessBased

./: LICENSE  PackagingGuide.docx  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
Packaging/: README.md  setup.cfg
Packaging/src/da4rdm_vis/: Evaluate.py  Timestamp.py
Packaging/src/da4rdm_vis.egg-info/: top_level.txt
SampleData/: OperationalData.json  OperationalDatamodify.json  RDM_lifecycle_analysis.csv  RDM_lifecycle_analysis_-_28-04-2022.csv
src/DA4RDM_Vis_ProcessBased.egg-info/: PKG-INFO
src/da4rdm_vis.egg-info/: PKG-INFO  SOURCES.txt
