[metadata]
name = da4rdm_vis
version = 0.0.5
description = Test Package that can be used to perform RDLC analysis by determining the correlations for the different phases of the development life cycle.
long_description = file: README.md
long_description_content_type = text/markdown
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
[options.packages.find]
where = src

